--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
 
         const menuData = {
             'HOT SALES': [
-                { id: 1, name: "Egg Coffee", nameKh: "កាហ្វេពងមាន់", price: 4.50, image: "file:///D:/Royall%20Tea_Cafe/Pic/Royal%20Coffee%20&%20Tea%20%E2%AD%90%203.7_files/3766b6f6eaba4891bebd9fde7141dac0_1743326057978577924.webp" },
+                { id: 1, name: "Egg Coffee", nameKh: "កាហ្វេពងមាន់", price: 4.50, image: "https://food-cms.grab.com/compressed_webp/items/KHITEA20250329185400870518/detail/3766b6f6eaba4891bebd9fde7141dac0_1743326057978577924.webp" },
                 { id: 2, name: "Mocha", nameKh: "ម៉ូកា", price: 4.00, image: "file:///D:/Royall%20Tea_Cafe/Pic/Royal%20Coffee%20&%20Tea%20%E2%AD%90%203.7_files/98bc89b6cead43d68aa8ee8d568e6702_1743326057925986955.webp" },
                 { id: 3, name: "Coffee Latte", nameKh: "កាហ្វេឡាតេ", price: 3.75, image: "file:///D:/Royall%20Tea_Cafe/Pic/Royal%20Coffee%20&%20Tea%20%E2%AD%90%203.7_files/61f42574637c43b5b43917866acf5c96_1743326058008760193.webp" },
                 { id: 4, name: "Cappuccino", nameKh: "កាពូស៊ីណី", price: 3.75, image: "file:///D:/Royall%20Tea_Cafe/Pic/Royal%20Coffee%20&%20Tea%20%E2%AD%90%203.7_files/8fde6a9b8d7b408c9dd68a31a3e9f2f7_1743326058071300227.webp" },
